fix cards on mobile

--- a/src/app/animes/anime-list/anime-list-item/anime-list-item.component.sass
+++ b/src/app/animes/anime-list/anime-list-item/anime-list-item.component.sass
@@ -3,8 +3,8 @@
 .mobile-card
     @extend .card
     cursor: pointer
-    width: 170px
-    height: 280px
+    width: 140px
+    height: 240px
 
 .desktop-card
     @extend .card
