--- a/src/app/animes/anime-top-list/anime-top-list-item/anime-top-list-item.component.sass
+++ b/src/app/animes/anime-top-list/anime-top-list-item/anime-top-list-item.component.sass
@@ -3,8 +3,8 @@
 .mobile-card
     @extend .card
     cursor: pointer
-    width: 140px
-    height: 200px
+    width: 200px
+    height: 320px
 
 .desktop-card
     @extend .card
